Horizontal scroll fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,10 +346,6 @@ body {
 
 /* ===MEDIAREQUESTS=== */
 @media screen and (max-width: 599px) {
-  body {
-    max-width: 100%;
-  }
-
   .wrapper {
     width: 320px;
     margin: 0 auto;
